# Titanic_Logistic_Regression

./: README.md
ModeloLogística/ModeloCPP/: CMakeLists.txt  README.md  main.cpp
ModeloLogística/ModeloCPP/Datasets/: Titanic_dataset.csv
ModeloLogística/ModeloCPP/RegressionLogistic/: regressionlogistic.cpp
logisticProject/: CMakeLists.txt  main.cpp
logisticProject/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  costo.txt
logisticProject/Extraction/: extraction.cpp  extraction.h
logisticProject/RegressionLogistic/: regressionlogistic.h
